# ciosimulator

./: .gitignore  BUILD_COMPLETE_SUMMARY.md  BUILD_EXECUTABLE.md  BUILD_WINDOWS_EXE.md  COMMANDS.md  COMPLETE_BUILD_GUIDE.md  Cargo.toml  FIXED_ISSUES.md  GETTING_STARTED.md  README.md  README_EN.md  RUST_SETUP.md  SETUP_CHECKLIST.md  TAURI_CONFIG.md  TAURI_OVERVIEW.md  TAURI_QUICKSTART.md  TAURI_SETUP.md  build-windows.sh  build.sh  debug-errors.js  package-lock.json  package.json  tauri.conf.json
.cargo/: config.toml
js/: audio.js  config.js  hotspots.js  leaderboard.js  office.js  qrCode.js  ui.js  utils.js
js/worlds/: corporateWorld.js
public/: index.html
public/css/: styles.css
public/js/: gameState.js  main.js  scenarios.js  scene.js
public/js/worlds/: campusWorld.js  corporateWorld.js  hospitalWorld.js  worldFactory.js
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
